# explore_borders

./: CMakeLists.txt  ReadMe.txt  package.xml
launch/: exp_kobuki_exp.launch  exploreNode.launch  frontierExp.launch  frontierExp_kbk.launch  husky_box_world.launch  husky_box_world2.launch  husky_box_world_fe.launch  husky_factory.launch  husky_school.launch  kobuki_box_world.launch  kobuki_box_world_fe.launch  kobuki_box_world_for_exp.launch  move_base_kbk.launch  rrt_husky_box.launch  rrt_kobuki_fixed.launch  rrt_kobuki_orig.launch  rrt_node_husky.launch
launch/demo/: exp_husky_15_15.launch  exp_husky_1730.launch  exp_kobuki_15_15.launch  exp_kobuki_1730.launch  fe_husky_15_15.launch  fe_husky_1730.launch  fe_kobuki_15_15.launch  rrt_husky_1515.launch
launch/demo/exp 1/: exp_husky_15_15.launch  exp_kobuki_15_15.launch  fe_husky_15_15.launch  rrt_husky_1515.launch  rrt_kobuki_1515.launch
launch/param/: costmap_common_fe_kbk.yaml  costmap_exploration.yaml  husky_move_base.launch  move_baseSafe.launch  move_base_no_ns.launch  planner.yaml
msg/: loop_array.msg
rviz/: empty.rviz  empty_husky.rviz  husky_rrt.rviz  kobuki.rviz  kobuki_fe.rviz
src/: explore_node.cpp  explore_node.h  generateLoops.cpp  generateLoops.h  laser_hot_fix.cpp
worlds/: box_world.launch  box_world.world  box_world2.world  building_complex.world  empty_closed.world  empty_playpen.world  empty_playpen2.world  factory1.world  gas_station.world  gas_station2.world  pickups.world  playpen_empty.launch  school.world
